--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,7 +1,9 @@
 ---
 mariadb_change_root_password: false
+mariadb_root_username: root
 mariadb_root_password:
 mariadb_replication: true
+mariadb_replication_username: repl
 mariadb_replication_password:
 mariadb_replication_role: secondary
 mariadb_replication_bootstrap: false
