--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,7 +2,8 @@
 mariadb_change_root_password: false
 mariadb_root_username: root
 mariadb_root_password:
-mariadb_replication: true
+
+mariadb_replication: false
 mariadb_replication_username: repl
 mariadb_replication_password:
 mariadb_replication_role: secondary
